--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -214,6 +214,75 @@ add_emutest_test(
     TEST_SCRIPT "loads-core.lua"
 )
 
+# See https://github.com/JesseTG/melonds-ds/issues/62
+add_emutest_test(
+    NAME "Core doesn't hang when resetting with built-in system files and direct boot (NDS)"
+    CONTENT "${NDS_ROM}"
+    TEST_SCRIPT "no-hang-on-reboot.lua"
+    CORE_OPTION melonds_boot_directly="enabled"
+    CORE_OPTION melonds_show_cursor="disabled"
+)
+
+add_emutest_test(
+    NAME "Core doesn't hang when resetting with native system files and direct boot (NDS)"
+    CONTENT "${NDS_ROM}"
+    TEST_SCRIPT "no-hang-on-reboot.lua"
+    ARM7_BIOS
+    ARM9_BIOS
+    NDS_FIRMWARE
+    CORE_OPTION melonds_firmware_nds_path="melonDS DS/firmware.bin"
+    CORE_OPTION melonds_boot_directly="enabled"
+    CORE_OPTION melonds_use_external_bios="enabled"
+    CORE_OPTION melonds_show_cursor="disabled"
+)
+
+add_emutest_test(
+    NAME "Core doesn't hang when resetting with native system files and native boot (NDS)"
+    CONTENT "${NDS_ROM}"
+    TEST_SCRIPT "no-hang-on-reboot.lua"
+    ARM7_BIOS
+    ARM9_BIOS
+    NDS_FIRMWARE
+    CORE_OPTION melonds_firmware_nds_path="melonDS DS/firmware.bin"
+    CORE_OPTION melonds_boot_directly="disabled"
+    CORE_OPTION melonds_use_external_bios="enabled"
+    CORE_OPTION melonds_show_cursor="disabled"
+)
+
+add_emutest_test(
+    NAME "Core doesn't hang when resetting with native system files and direct boot (DSi)"
+    CONTENT "${NDS_ROM}"
+    TEST_SCRIPT "no-hang-on-reboot.lua"
+    ARM7_BIOS
+    ARM9_BIOS
+    ARM7_DSI_BIOS
+    ARM9_DSI_BIOS
+    DSI_FIRMWARE
+    DSI_NAND
+    CORE_OPTION melonds_firmware_dsi_path="melonDS DS/dsi_firmware.bin"
+    CORE_OPTION melonds_dsi_nand_path="melonDS DS/dsi_nand.bin"
+    CORE_OPTION melonds_boot_directly="enabled"
+    CORE_OPTION melonds_use_external_bios="enabled"
+    CORE_OPTION melonds_show_cursor="disabled"
+)
+
+add_emutest_test(
+    NAME "Core doesn't hang when resetting with native system files and native boot (DSi)"
+    CONTENT "${NDS_ROM}"
+    TEST_SCRIPT "no-hang-on-reboot.lua"
+    ARM7_BIOS
+    ARM9_BIOS
+    ARM7_DSI_BIOS
+    ARM9_DSI_BIOS
+    DSI_FIRMWARE
+    DSI_NAND
+    CORE_OPTION melonds_firmware_dsi_path="melonDS DS/dsi_firmware.bin"
+    CORE_OPTION melonds_dsi_nand_path="melonDS DS/dsi_nand.bin"
+    CORE_OPTION melonds_boot_directly="disabled"
+    CORE_OPTION melonds_use_external_bios="enabled"
+    CORE_OPTION melonds_show_cursor="disabled"
+)
+
 # See https://github.com/JesseTG/melonds-ds/issues/51
 add_retroarch_test(
     NAME "Core exposes config options to frontend"
