Fix some incorrect tests
- I forgot to enable DSi mode for them

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -261,6 +261,7 @@ add_emutest_test(
     DSI_NAND
     CORE_OPTION melonds_firmware_dsi_path="melonDS DS/dsi_firmware.bin"
     CORE_OPTION melonds_dsi_nand_path="melonDS DS/dsi_nand.bin"
+    CORE_OPTION melonds_console_mode="dsi"
     CORE_OPTION melonds_boot_directly="enabled"
     CORE_OPTION melonds_use_external_bios="enabled"
     CORE_OPTION melonds_show_cursor="disabled"
@@ -277,6 +278,7 @@ add_emutest_test(
     DSI_FIRMWARE
     DSI_NAND
     CORE_OPTION melonds_firmware_dsi_path="melonDS DS/dsi_firmware.bin"
+    CORE_OPTION melonds_console_mode="dsi"
     CORE_OPTION melonds_dsi_nand_path="melonDS DS/dsi_nand.bin"
     CORE_OPTION melonds_boot_directly="disabled"
     CORE_OPTION melonds_use_external_bios="enabled"
