Explicitly define DEBUG

--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -195,3 +195,9 @@ if (TRACY_ENABLE)
     target_include_directories(libretro SYSTEM PUBLIC TracyClient)
     target_compile_definitions(libretro PUBLIC HAVE_TRACY)
 endif()
+
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    message(STATUS "Defining DEBUG in libretro and libretro-common targets")
+    target_compile_definitions(libretro PUBLIC DEBUG)
+    target_compile_definitions(libretro-common PUBLIC DEBUG)
+endif ()
