--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -184,8 +184,9 @@ endif()
 
 target_compile_definitions(libretro PUBLIC MELONDSDS_VERSION="${CMAKE_PROJECT_VERSION}")
 target_compile_definitions(libretro PUBLIC MELONDSDS_NAME="${CMAKE_PROJECT_NAME}")
+target_compile_definitions(libretro PUBLIC NK_INCLUDE_DEFAULT_FONT NK_INCLUDE_FIXED_TYPES NK_INCLUDE_DEFAULT_ALLOCATOR)
 
-target_link_libraries(libretro PUBLIC libretro-common core libretro-assets glm::glm_static stb)
+target_link_libraries(libretro PUBLIC libretro-common core libretro-assets glm::glm_static nuklear)
 
 if (HAVE_NETWORKING)
     target_compile_definitions(libretro PUBLIC BUILDING_LIBSLIRP)
