Skip the error screen in the test suite, unless otherwise demanded

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -66,7 +66,7 @@ cmake_path(GET DSI_NAND FILENAME DSI_NAND_NAME)
 include(CMakePrintHelpers)
 
 function(add_retroarch_test)
-    set(options WILL_FAIL ARM7_BIOS ARM9_BIOS ARM7_DSI_BIOS ARM9_DSI_BIOS NDS_FIRMWARE DSI_FIRMWARE DSI_NAND)
+    set(options WILL_FAIL ARM7_BIOS ARM9_BIOS ARM7_DSI_BIOS ARM9_DSI_BIOS NDS_FIRMWARE DSI_FIRMWARE DSI_NAND NO_SKIP_ERROR_SCREEN)
     set(oneValueArgs NAME MAX_FRAMES CONTENT REQUIRE_FILE_SIZE_UNCHANGED REQUIRE_FILE_CREATED)
     set(multiValueArgs CORE_OPTION PASS_REGULAR_EXPRESSION FAIL_REGULAR_EXPRESSION SKIP_REGULAR_EXPRESSION)
     cmake_parse_arguments(PARSE_ARGV 0 RETRO "${options}" "${oneValueArgs}" "${multiValueArgs}")
@@ -87,6 +87,10 @@ function(add_retroarch_test)
     list(APPEND REQUIRED_FILES "$<TARGET_FILE:libretro>")
     if (RETRO_CONTENT)
         list(APPEND REQUIRED_FILES "${RETRO_CONTENT}")
+    endif()
+
+    if (NOT RETRO_NO_SKIP_ERROR_SCREEN)
+        list(APPEND ENVIRONMENT MELONDSDS_SKIP_ERROR_SCREEN=1)
     endif()
 
     if (RETRO_REQUIRE_FILE_SIZE_UNCHANGED)
@@ -136,7 +140,7 @@ function(add_retroarch_test)
 endfunction()
 
 function(add_emutest_test)
-    set(options WILL_FAIL ARM7_BIOS ARM9_BIOS ARM7_DSI_BIOS ARM9_DSI_BIOS NDS_FIRMWARE DSI_FIRMWARE DSI_NAND)
+    set(options WILL_FAIL ARM7_BIOS ARM9_BIOS ARM7_DSI_BIOS ARM9_DSI_BIOS NDS_FIRMWARE DSI_FIRMWARE DSI_NAND NO_SKIP_ERROR_SCREEN)
     set(oneValueArgs NAME TEST_SCRIPT CONTENT)
     set(multiValueArgs CORE_OPTION PASS_REGULAR_EXPRESSION FAIL_REGULAR_EXPRESSION SKIP_REGULAR_EXPRESSION)
     cmake_parse_arguments(PARSE_ARGV 0 RETRO "${options}" "${oneValueArgs}" "${multiValueArgs}")
@@ -161,6 +165,9 @@ function(add_emutest_test)
         # emutest hardcodes a single root directory
     else()
         set(EMUTEST_HOME "$ENV{HOME}/.emutest")
+    endif()
+    if (NOT RETRO_NO_SKIP_ERROR_SCREEN)
+        list(APPEND ENVIRONMENT MELONDSDS_SKIP_ERROR_SCREEN=1)
     endif()
 
     list(APPEND ENVIRONMENT "EMUTEST_HOME=${EMUTEST_HOME}")
