Add a new enum and a formatter

--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -32,6 +32,7 @@ add_library(libretro MODULE
     exceptions.cpp
     exceptions.hpp
     file.hpp
+    format.hpp
     glsym_private.cpp
     glsym_private.h
     info.cpp
