--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -203,6 +203,7 @@ target_compile_definitions(libretro PUBLIC
     PNTR_ENABLE_VARGS
     PNTR_PIXELFORMAT_ARGB
     PNTR_ENABLE_MATH
+    STB_IMAGE_STATIC # To avoid using any dynamically-linked STB implementations
 )
 
 target_link_libraries(libretro PUBLIC libretro-common core libretro-assets glm::glm_static pntr fmt::fmt)
