Build with networking on the Switch

--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -120,12 +120,17 @@ add_common_definitions(libretro)
 
 if (HAVE_NETWORKING)
     target_sources(libretro PRIVATE
-        ${melonDS_SOURCE_DIR}/src/frontend/qt_sdl/LAN_PCap.cpp
         ${melonDS_SOURCE_DIR}/src/frontend/qt_sdl/LAN_Socket.cpp
         platform/lan.cpp
     )
 
     target_include_directories(libretro SYSTEM PRIVATE "${melonDS_SOURCE_DIR}/src/frontend/qt_sdl")
+
+    if (HAVE_NETWORKING_DIRECT_MODE)
+        target_sources(libretro PRIVATE
+            ${melonDS_SOURCE_DIR}/src/frontend/qt_sdl/LAN_PCap.cpp
+        )
+    endif()
 endif ()
 
 if (HAVE_OPENGL OR HAVE_OPENGLES)
