--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -48,6 +48,7 @@ add_library(libretro MODULE
     microphone.hpp
     memory.cpp
     memory.hpp
+    pcap.hpp
     platform/file.cpp
     platform/lan.cpp
     platform/mp.cpp
