--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,6 +1,5 @@
 name: Bug Report
 description: Found a problem? Tell us so we can fix it!
-title: "[Bug] <title>"
 labels: ["bug"]
 body:
   - type: markdown
@@ -24,21 +23,21 @@ body:
   - type: dropdown
     id: upstream
     attributes:
-      label: Does the problem happen in upstream melonDS?
+      label: Does the problem happen in standalone melonDS?
       description: >
-        This core stays close to upstream melonDS,
+        This core closely follows standalone melonDS,
         so any bugs present there may affect melonDS DS as well.
-        
-        **If the answer is yes, please [open a ticket or find an existing one](https://github.com/melonDS-emu/melonDS/issues)
-        in the upstream melonDS repository.**
-        You may continue to submit this one,
-        but it may be closed if there's nothing I can do about it in this repo.
+        **If the problem occurs on standalone melonDS,
+        please [open a ticket or comment on an existing one](https://github.com/melonDS-emu/melonDS/issues)
+        in its repository.**
+        You may continue to submit this bug report,
+        and it will be considered resolved when a fix upstream is integrated.
       options:
         - I don't know.
         - Yes, in the [latest stable release](https://github.com/melonDS-emu/melonDS/releases).
         - Yes, in the [latest `master` build](https://github.com/melonDS-emu/melonDS).
         - No, it's a bug specific to melonDS DS.
-        - Not applicable, the bug involves features not present in upstream melonDS.
+        - Not applicable, the bug involves features not present in standalone melonDS.
       default: 0
     validations:
       required: true
@@ -49,14 +48,14 @@ body:
       label: What happened?
       description: >
         Describe the problem you're having,
-        and provide as much information as you can to help us reproduce it.
+        and provide as much information as you can to help reproduce it.
         Please attach logs, screenshots, videos, savestates, or save data
         (otherwise you may be asked to go back and take some).
-
         **Include steps to reproduce the problem if possible;**
         bugs that are easy to reproduce are much easier to fix!
-      placeholder: >
+      placeholder: |
         Waluigi is in my computer! Here's a log:
+
         ```
         [  0.000000] [FATAL] Waluigi is in your computer!
         ```
@@ -108,7 +107,7 @@ body:
       description: >
         melonDS DS is primarily designed for RetroArch,
         but it will work on other libretro frontends as well.
-        Tell me which frontend(s) you've seen the problem on,
+        List the frontends you've seen the problem on,
         as well as the version and distribution.
       placeholder: RetroArch 1.16.0, Steam and Flatpak releases
     validations:
@@ -122,7 +121,7 @@ body:
         You must understand and agree to the following terms in order to submit this bug report.
         If your behavior indicates otherwise, your report may be closed.
       options:
-        - label: I agree to follow the [code of conduct](../CODE_OF_CONDUCT.md).
+        - label: I agree to follow the [code of conduct](../blob/main/CODE_OF_CONDUCT.md).
           required: true
         - label: I understand that melonDS DS is not developed or maintained by the authors of melonDS.
           required: true
@@ -133,4 +132,4 @@ body:
 
   - type: markdown
     attributes:
-      value: All good? Thank you very much!
+      value: Thank you very much!
