--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -206,8 +206,9 @@ if (WIN32 AND MINGW)
 endif()
 
 target_compile_definitions(libretro PUBLIC
-    MELONDSDS_VERSION="${CMAKE_PROJECT_VERSION}"
+    MELONDSDS_VERSION="${MELONDSDS_VERSION}"
     MELONDSDS_NAME="${CMAKE_PROJECT_NAME}"
+    MELONDSDS_VERSION_STRING="${CMAKE_PROJECT_NAME} ${MELONDSDS_VERSION}"
     PNTR_ENABLE_DEFAULT_FONT
     PNTR_ENABLE_FILTER_SMOOTH
     PNTR_ENABLE_TTF
